--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+.column {
+  flex: 50%;
+}
+
+/* Clear floats after the columns */
+.row {
+  display: flex;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -23,6 +32,10 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
